--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -777,3 +777,7 @@ form.booking-period {
 .organizer-form .alert-link {
   text-decoration: underline;
 }
+
+.audience .help-block {
+  font-size: small;
+}
