--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -1,6 +1,6 @@
 
 <div class="modal-header">
-    <button type="button" class="close" ng-click="cancel()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+    <button type="button" class="close" ng-click="cancelEditPrice()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
     <h4 class="modal-title">Prijzen toevoegen</h4>
 </div>
 <div class="modal-body">
@@ -78,7 +78,7 @@
 
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="cancel()">Sluiten</button>
+    <button type="button" class="btn btn-default" ng-click="cancelEditPrice()">Sluiten</button>
     <button type="button"
             class="btn btn-primary organisator-toevoegen-bewaren"
             ng-click="validatePrice()">
