--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -22,7 +22,7 @@
                                    name="name"
                                    placeholder="Doelgroep"
                                    ng-model="priceInfo.name"
-                                   ng-class="{ 'has-error': priceInfoForm.name.$invalid && formPriceSubmitted}"
+                                   ng-class="{ 'has-error': priceForm.name.$invalid }"
                                    required />
                         </span>
                     </td>
@@ -38,7 +38,7 @@
                                            name="price"
                                            ng-model="priceInfo.price"
                                            ng-model-options="{ updateOn: 'blur' }"
-                                           ng-class="{ 'has-error': priceInfoForm.price.$invalid && formPriceSubmitted}"
+                                           ng-class="{ 'has-error': priceForm.price.$invalid }"
                                            required />
                                 </div>
                                 <div class="form-group">euro</div>
@@ -81,7 +81,8 @@
     <button type="button" class="btn btn-default" ng-click="cancelEditPrice()">Sluiten</button>
     <button type="button"
             class="btn btn-primary organisator-toevoegen-bewaren"
-            ng-click="validatePrice()">
+            ng-click="validatePrice()"
+            ng-disabled="priceForm.$invalid">
         Bewaren <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
     </button>
 </div>
