III-1754 modal can only be saved when dirty

--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -82,7 +82,7 @@
     <button type="button"
             class="btn btn-primary organisator-toevoegen-bewaren"
             ng-click="validatePrice()"
-            ng-disabled="priceForm.$invalid">
+            ng-disabled="priceForm.$invalid || priceForm.$pristine">
         Bewaren <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
     </button>
 </div>
