III-1736: Remove migration step from duplication page

--- a/src/duplication/event-duplication-step.component.html
+++ b/src/duplication/event-duplication-step.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-info" role="alert">
-    <strong>Je staat op het punt een evenement te dupliceren.</strong><br>
+    <strong>Je staat op het punt een evenement te kopiëren.</strong><br>
     Om overlappende data te vermijden, kies je een nieuwe kalender voor dit evenement.
 </div>
 
