--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -24,6 +24,7 @@
 @import "event-form.less";
 @import "event-detail.less";
 @import "editable-click";
+@import "cultuurkuur-panel.less";
 
 //Management module
 @import "query-search-result.less";
