III-1813 css styling for panel, image and icon

--- a/src/styles/cultuurkuur-panel.less
+++ b/src/styles/cultuurkuur-panel.less
@@ -1,9 +1,13 @@
 .cultuurkuur-component {
+    margin-left: 12px;
     .panel {
         max-width: 95%;
     }
 }
 
-.cultuurkuur-background {
+.cultuurkuur-logo {
     background-image: url(/images/cultuurkuur-logo.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
