III-1813: Use bind-once for preview/edit-link and calendar-summary

--- a/src/management/moderation/components/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer.html
@@ -14,15 +14,15 @@
                 </a>
             </header>
 
-            <p class="text-muted"><udb-calendar-summary offer="moc.offer" show-opening-hours="true"></udb-calendar-summary></p>
+            <p class="text-muted"><udb-calendar-summary offer="::moc.offer" show-opening-hours="true"></udb-calendar-summary></p>
 
             <div class="content" ng-bind-html="moc.offer.description"></div>
 
-            <a ng-href="{{ moc.offer.url  + '/preview' }}">
+            <a ng-href="{{ ::moc.offer.url  + '/preview' }}">
                 Alle info bekijken
             </a>
             &nbsp;
-            <a ng-href="{{ moc.offer.url  + '/edit' }}">
+            <a ng-href="{{ ::moc.offer.url  + '/edit' }}">
                 Bewerken
             </a>
         </div>
