III-1831: Close moderation-offer article HTML element

--- a/src/management/moderation/components/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer.html
@@ -44,4 +44,4 @@
             <span ng-if="moc.isRejected()" class="offer-rejected text-danger btn-moderation"><i class="fa fa-flag"></i>Afgekeurd</span>
         </div>
     </footer>
-</div>
+</article>
