III-1754 When dialog gets opened the ‘bewaar’ button should stay disabled, this is checked by pristine state.

--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -82,7 +82,7 @@
     <button type="button"
             class="btn btn-primary organisator-toevoegen-bewaren"
             ng-click="pfmc.validatePrice()"
-            ng-disabled="pfmc.priceForm.$invalid">
+            ng-disabled="pfmc.priceForm.$invalid || pfmc.priceForm.$pristine">
         Bewaren <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
     </button>
 </div>
