III-1874 fix for cultuurkuur-image css

--- a/src/styles/cultuurkuur-panel.less
+++ b/src/styles/cultuurkuur-panel.less
@@ -1,5 +1,5 @@
 .cultuurkuur-component {
-    margin-left: 12px;
+    margin-top: 12px;
     .panel {
         max-width: 95%;
     }
@@ -7,7 +7,8 @@
 
 .cultuurkuur-logo {
     background-image: url(/images/cultuurkuur-logo.svg);
-    background-size: contain;
+    background-size: 5vw;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: top right;
+    background-origin: content-box;
 }
