III-1812 new moderation-summary component

--- a/src/styles/moderation.less
+++ b/src/styles/moderation.less
@@ -1,5 +1,5 @@
-udb-moderation-offer {
-    .moderation-offer {
+udb-moderation-summary {
+    .moderation-summary {
         border: 1px solid @udb-gray-light;
         background: #f5f5f5;
         padding: 1em;
