III-1812 add continueValidation property

--- a/src/management/moderation/components/moderation-summary/moderation-summary.html
+++ b/src/management/moderation/components/moderation-summary/moderation-summary.html
@@ -33,6 +33,6 @@
     </div>
     <footer class="row" ng-hide="moc.loading">
         <div class="col-md-6">Toegevoegd door {{moc.offer.creator}}</div>
-        <udb-moderation-offer offer="moc.offer"></udb-moderation-offer>
+        <udb-moderation-offer offer="moc.offer" continueValidation="false"></udb-moderation-offer>
     </footer>
 </article>
