III-1812 button styling

--- a/src/styles/moderation.less
+++ b/src/styles/moderation.less
@@ -54,3 +54,10 @@ udb-moderation-summary {
         }
     }
 }
+
+.moderation-detail{
+    button {
+        display: block;
+        width: 100%;
+    }
+}
