--- a/src/styles/moderation.less
+++ b/src/styles/moderation.less
@@ -59,5 +59,14 @@ udb-moderation-summary {
     button {
         display: block;
         width: 100%;
+        text-align: left;
+        margin-bottom: 1em;
+    }
+    a{
+        display: block;
+        text-decoration: underline;
+    }
+    p{
+        color: @udb-gray-dark;
     }
 }
