III-1812 further styling for event-detail

--- a/src/styles/moderation.less
+++ b/src/styles/moderation.less
@@ -69,4 +69,12 @@ udb-moderation-summary {
     p{
         color: @udb-gray-dark;
     }
+
+    i{
+        margin-right: 1em;
+    }
+
+    #continue-validation{
+        margin-left: 2em;
+    }
 }
