--- a/src/management/moderation/components/moderation-offer/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer/moderation-offer.html
@@ -6,4 +6,4 @@
 
 <span ng-if="moc.isApproved()" class="offer-approved text-success btn-moderation"><i class="fa fa-flag"></i>Goedgekeurd</span>
 <span ng-if="moc.isRejected()" class="offer-rejected text-danger btn-moderation"><i class="fa fa-flag"></i>Afgekeurd</span>
-<a href="" ng-if="(moc.isApproved() || moc.isRejected()) && moc.next">Verder valideren</a>
+<a href="" id="continue-validation" ng-if="(moc.isApproved() || moc.isRejected()) && moc.next">Verder valideren</a>
