III-1812 p to small

--- a/src/styles/moderation.less
+++ b/src/styles/moderation.less
@@ -66,8 +66,9 @@ udb-moderation-summary {
         display: block;
         text-decoration: underline;
     }
-    p{
+    small{
         color: @udb-gray-dark;
+        display: block;
     }
 
     i{
