--- a/src/management/moderation/components/moderation-offer/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer/moderation-offer.html
@@ -1,4 +1,4 @@
-<p ng-if="moc.next" class="muted">Valideren</p>
+<small ng-if="moc.next" class="muted">Valideren</small>
 <button ng-if="moc.isReadyForValidation()" type="submit" class="btn btn-success btn-moderation" ng-click="moc.approve()">
                 <i class="fa fa-flag text-success"></i>Goedkeuren</button>
 <button ng-if="moc.isReadyForValidation()" type="submit" class="btn btn-danger btn-moderation" ng-click="moc.askForRejectionReasons()">
