--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -4,23 +4,23 @@
 <div class="modal-body">
     <form name="placeForm" class="css-form">
         <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.name.$error.required }">
-            <label>Naam locatie</label>
-            <input class="form-control" type="text" ng-model="newPlace.name" name="name" required>
+            <label for="name">Naam locatie</label>
+            <input id="name" class="form-control" type="text" ng-model="newPlace.name" name="name" required>
             <span class="help-block" ng-show="showValidation && placeForm.name.$error.required">
         De naam van de locatie is een verplicht veld.
       </span>
         </div>
         <div class="row">
-            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-xs-8">
                 <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.address_streetAddress.$error.required }">
-                    <label>Straat en nummer</label>
+                    <label for="locatie-straat">Straat en nummer</label>
                     <input class="form-control" id="locatie-straat" name="address_streetAddress" type="text" ng-model="newPlace.address.streetAddress" required>
                     <span class="help-block" ng-show="showValidation && placeForm.address_streetAddress.$error.required">
             Straat is een verplicht veld.
           </span>
                 </div>
             </div>
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-xs-4">
                 <div class="form-group">
                     <label>Gemeente</label>
                     <p class="form-control-static" id="waar-locatie-toevoegen-gemeente" ng-bind="newPlace.address.addressLocality"></p>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.eventType.$error.required }">
-            <label>Categorie</label>
+            <label for="locatie-toevoegen-types">Categorie</label>
             <p class="help-block">Kies een categorie die deze locatie het best omschrijft.</p>
             <select class="form-control" size="4" name="eventType" id="locatie-toevoegen-types" ng-model="newPlace.eventType" required>
           <option ng-repeat="category in categories  | orderBy:'label' track by category.id" value="{{category.id}}" >{{category.label}}</option>
